[package]
name = "mqtt_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42" }
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
paho-mqtt = { version = "0.13.3", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

